[project]
name = "lanscan"
version = "0.1.0"
description = "Discover devices on your local LAN (Wi-Fi + Ethernet) with a live TUI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Lucas Daddiego" }]
keywords = ["network", "lan", "scanner", "tui", "mdns", "bonjour", "arp", "ports", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "textual>=8.0",
    "zeroconf>=0.140",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/ldaddiego/lanscan"
Repository = "https://github.com/ldaddiego/lanscan"
Issues = "https://github.com/ldaddiego/lanscan/issues"

[project.scripts]
lanscan = "lanscan.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lanscan"]
