[project]
name = "lanscan"
version = "0.1.0"
description = "Discover devices on your local LAN (Wi-Fi + Ethernet) with a live TUI."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Lucas Daddiego" }]
keywords = ["network", "lan", "scanner", "tui", "mdns", "bonjour", "arp", "ports", "macos", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "textual>=8.0",
    "zeroconf>=0.140",
    "ifaddr>=0.1.7",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/lucasdaddiego/lanscan"
Repository = "https://github.com/lucasdaddiego/lanscan"
Issues = "https://github.com/lucasdaddiego/lanscan/issues"

[project.scripts]
lanscan = "lanscan.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

# PEP 735 group, so `uv sync --group dev` works too (mirrors the dev extra).
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lanscan"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["lanscan"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
